src/objects/Call_Note_Competitor_Product__c.object
<CustomObject>
    <description>Junction Object between Competitor Products and Activities</description>
    <fields>
        <fullName>Call_Note__c</fullName>
        <label>Call Note</label>
        <referenceTo>Activity_Detail__c</referenceTo>
        <relationshipName>Competitor_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product</label>
        <referenceTo>Competitor_Product__c</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Call_Note_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discussion__c</fullName>
        <label>% Discussion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competitor Product and Activity Junction</label>
    <nameField>
        <displayFormat>CNCP-{0000}</displayFormat>
        <label>Competitor Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Product and Activity Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>